samples/_failures_safe/1761194284_bd3f4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66a40888.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_66a40888.c:181:17: error: expected identifier at end of input
  181 |                 if (graph->
      |                 ^~
./samples/SAFE/__tmp_66a40888.c:181:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_66a40888.c:181:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_66a40888.c:181:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_66a40888.c:181:17: error: expected declaration or statement at end of input
